[package]
name = "taskratchet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_json = "1.0.40"
reqwest = "0.9.19"
structopt = "0.2.18"
failure = "0.1.5"
xdg = "2.2.0"
openssl-sys = { version = "0.9.48", optional = true, features = ["vendored"] }

[features]
vendored-openssl = ["openssl-sys"]
